# underspace

./: LICENSE  db.sqlite3  pyproject.toml  requirements.txt
core/: settings.py  urls.py
forum/: .gitignore  admin.py  forms.py  models.py  urls.py  views.py
forum/migrations/: 0001_initial.py  0002_board_post_board.py  0003_alter_post_content_alter_post_title.py  0004_comment.py  0005_comment_post.py  0006_alter_comment_options_announcement.py  0007_post_attachment.py  0008_alter_post_options_alter_post_attachment.py
forum/templates/: board.html  index.html  post.html  rule.html
templates/: base.html
