[tool.poetry]
name = "django-forum"
version = "0.1.0"
description = "an anoymous forum for programmers"
authors = ["grandmaster"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.2"
django-crispy-forms = "^2.3"
crispy-bootstrap5 = "^2024.10"
pillow = "^10.4.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
